--- a/style.css
+++ b/style.css
@@ -455,3 +455,112 @@ button:hover {
         border-radius: 2px;
     }
 }
+@media screen and (max-width: 485px){
+    #container1 {
+    height: 90px;
+}
+#cont12{
+    height: 95px;
+}
+#main{
+    margin-left: 2.8vw;
+}
+#login1 {
+    padding: 0.24vw 14px;
+}
+#img12 {
+    height: 1.78vw;
+    
+}
+#new1 {
+    padding: 1px;
+    margin-right: -1.5vw;
+    margin-top: -1.81vw;
+}
+@media screen and (max-width: 429px){
+    #new1 {
+        padding: 1px;
+        margin-right: -1.5vw;
+        margin-top: -1.85vw;
+    }
+    #img12 {
+        height: 1.75vw;
+        
+    }
+    #login1 {
+        padding: 0.6vw 14px;
+    }
+}
+@media screen and (max-width: 421px){
+    #img12 {
+        height: 1.73vw;
+        
+    }
+}
+#em1{
+    padding: 0.05vw 1vw;
+}
+h4{
+    margin: 0;
+    padding: 0;
+    margin-top: 1.5vw;
+    margin-bottom: 1.5vw;
+    font-size: 1.1vw;
+}
+#s{
+    font-size: 1.2vw;
+}
+#r1{
+    font-size: 0.8vw;
+} 
+#r2{
+    font-size: 0.65vw;
+}  
+}
+@media screen and (max-width: 377px){
+    .item {
+    margin: 0.9vw;
+    font-size: 1vw;
+    color: white;
+}
+#new1 {
+    padding: 1px;
+    margin-right: -1.5vw;
+    margin-top: -1.91vw;
+}
+#container1 {
+    height: 75px;
+}
+#cont12{
+    height: 80px;
+}
+#alljobs {
+    border-bottom: 1px solid white;
+    margin-bottom: 1.1vw;
+}
+#img12{
+    padding: 0.1vw 0;
+}
+#main{
+    margin-left: 3.9vw;
+}
+#j1{
+    margin-bottom: 0.5vw;
+}
+.new {
+    padding: 0;
+    border-radius: 1px;
+}
+#login1 {
+    padding: 0.1vw 16px;
+    font-size: 0.8vw;
+}
+#em1{
+    padding: 0.02vw 0.5vw;
+    font-size: 0.4vw;
+}
+#em{
+    padding: 1.2vw 4.7vw;
+    font-size: 0.8vw;
+}
+}
